# destor

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  destor.config  rebuild  tmp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  backup.h  chunk_phase.c  chunk_phase.h  config.c  debug.c  debug.h  dedup_phase.c  dedup_phase.h  deepsketch.h  destor.c  destor.h  do_backup.c  do_restore.c  feature_phase.c  filter_phase.c  har_rewrite.c  hash_phase.c  hash_phase.h  jcr.c  jcr.h  read_phase.c  restore.h  rewrite_phase.c  rewrite_phase.h  simi_phase.c  store_phase.c  trace_phase.c  xdelta_phase.c
src/chunking/: Makefile.am  Makefile.in  Makefile_backup  ae_chunking.c  chunking.h  fascdc_chunking.c  fastcdc_chunking.c  leap_chunking.c  rabin_chunking.c
src/featuring/: Makefile.am  Makefile.in  bruteforce_featuring.c  deepsketch.h  deepsketch_comp.cpp  deepsketch_featuring.c  featuring.h  fineANN_featuring.c  fineness_featuring.c  finesse_featuring.c  gear_hash.c  gear_hash_fea.c  highdedup_featuring.c  ntransform_featuring.c  ntransfrom_featuring.c  odess_featuring.c  rabin_fingerprint.c  rabin_hash.c  recordFeature.c  recordFeature.h  statis_featuring.c  weightchunk_featuring.c
src/featuring/deepsketch/: Makefile.am  deepsketch_featuring.cpp  deepsketch_featuring.h  deepsketch_featuring_c.h  deepsketch_model.cpp  deepsketch_model.h  test.c
src/fsl/: Makefile.am  Makefile.in  read_fsl_trace.c  read_fsl_trace.h
src/index/: Makefile.am  Makefile.in  index.c  index.h  kvstore_htable.c  sampling_method.c  segmenting_method.c  similarity_detection.c
src/recipe/: Makefile.am  Makefile.in  recipestore.c
src/similariting/: Makefile.am  Makefile.in  bruteforce_similariting.c  common.c  common_similariting.c  common_similaritingMT.c  deepsketch_similariting.c  fineANN_similariting.c  fineness_similariting.c  fineness_similariting.h  finesse_similariting.c  firstfitfeature_similariting.c  highdedup_similariting.c  mostfitfeature_similariting.c  ntransform_odess_similariting.c  ntransform_similariting.c  ntransfrom_similariting.c  similariting.h  statis_similariting.c  weightchunk_similariting.c
src/similariting/deepsketch/: Makefile.am  deepsketch_ANN.cpp  deepsketch_ANN.h  deepsketch_similariting.cpp  deepsketch_similariting.h  deepsketch_similariting_NGT.cpp  deepsketch_similariting_c.h  deepsketch_similariting_hnsw.cpp
src/similariting/deepsketch/NGT/: CMakeLists.txt  Capi.cpp  Clustering.h  Command.cpp  Command.h  Common.h  Graph.h  GraphOptimizer.h  Index.cpp  Index.h  Makefile.am  Node.cpp  Node.h  PrimitiveComparator.h  SharedMemoryAllocator.cpp  SharedMemoryAllocator.h  Thread.cpp  Thread.h  Tree.cpp  Tree.h  Version.cpp
src/similariting/deepsketch/NGT/NGTQ/: Command.h  Quantizer.h
src/similariting/deepsketch/hnswlib/: hnswlib.h  space_asym_hamming.h  space_asym_weight_hamming.h  space_hamming.h
src/similariting/hnswlib/: hnswlib.h  space_asym_weight_hamming.h  space_hamming.h
src/storage/: Makefile.am  Makefile.in  common.c  containerstore.c  storageCommon.c  storageCommon.h
src/utils/: Makefile.am  Makefile.in  queue.h  sync_queue.c  sync_queue.h
src/xdelta3/: Makefile.am  Makefile.in  recordDelta.c  recordDelta.h  xdelta3.c  xdelta_thread.c  xdelta_thread.h
test/: JC.c  JC.h  Makefile  Rabin_simple.c  ae.c  chunking.h  cpuUtilization.c  effectiveTestor  effectiveTestor.c  fastcdc.c  getCXXVersion  jc_breakdown.out_06_20  jcr.h  jumpSpeedup.out_06_19  leap.c  leveldbRun.sh  normalize_JC.out_06_19  note  perfromanceBreakdown.c  rabin.c  rabin_chunking.c  rapidCDCSizeDist  rapidCDCSizeDist.c  read.c  replaceFun.c  run.log_24  run.log_24_3.23  run.log_27_3.23  run.sh  sizeDist  sizeDist.c  speed.sh  speedTestor  speedTestor.c  speedTestor.h  target.c  testor  throughput  throughput.c  tmp
test/featureDebug/: fea  featureMain.c  featuring.h  rabin_hash.c
test/test_simi/: finesseSim  finesse_similariting.c
