noinst_LIBRARIES=libsimilar.a
libsimilar_a_SOURCES=deepsketch_similariting.c finesse_similariting.c highdedup_similariting.c ntransform_odess_similariting.c bruteforce_similariting.c fineANN_similariting.c  statis_similariting.c common_similariting.c weightchunk_similariting.c common_similaritingMT.c
LIBS= -lm -lcrypto -lssl
